feat: add capibara image asset, update WaitlistForm and blog components with author avatar support, enhance Blog layout with author card, and improve styles for better user experience

--- a/src/content/blog/dont-hide-your-code.mdx
+++ b/src/content/blog/dont-hide-your-code.mdx
@@ -2,7 +2,8 @@
 title: "Don't Hide Your Code: The Art of Transparency"
 description: "Why showing your work is better than hiding behind a curtain of 'proprietary' secrets."
 pubDate: 2025-12-19
-author: "Cogito Team"
+author: "Dmitrii Sakharov"
+avatar: "../../assets/images/capibara.jpg"
 image: "../../assets/images/STEM.png"
 tags: ["engineering", "open-source", "transparency"]
 ---
@@ -66,11 +67,344 @@ _Figure 1: Our Growplex project, built with full transparency._
 The relationship between code quality $Q$ and developer ego $E$:
 $$Q \propto \frac{1}{E}$$
 
----
+## The Psychology of Open Code
 
-### Conclusion
+When developers know their code will be seen, something interesting happens: they write better code. It's not about fear of judgment—it's about pride in craftsmanship.
+
+### The Accountability Effect
+
+Code that's hidden encourages shortcuts. Code that's visible encourages excellence. When you know someone might review your work, you naturally:
+
+- Write clearer variable names
+- Add meaningful comments
+- Structure code more thoughtfully
+- Think about edge cases
+- Consider maintainability
+
+### The Learning Accelerator
+
+Open code becomes a teaching tool. Junior developers learn faster when they can see how senior developers solve problems. Code reviews become more valuable when everyone can learn from the discussion.
+
+### Building a Culture of Excellence
+
+Transparency creates a positive feedback loop. Good code inspires better code. Visible mistakes become learning opportunities, not shameful secrets.
+
+## Building Trust Through Visibility
+
+Trust isn't built through NDAs and locked repositories. It's built through consistent, visible work.
+
+### The Client Perspective
+
+Clients who can see your code understand:
+
+- **What they're paying for**: They see the actual work, not just the output
+- **How problems are solved**: They understand your process
+- **The quality of your work**: They can assess technical competence
+- **Your commitment**: Visible code shows you stand behind your work
+
+### The Stakeholder Confidence
+
+When stakeholders can review code, they feel more involved and confident. They're not just trusting blindly—they're participating in the process.
+
+### Long-Term Relationship Building
+
+Transparency builds relationships that last. Clients who trust you because they've seen your work are more likely to return and refer others.
+
+## Security Through Obscurity: A Myth
+
+Many developers hide code under the guise of "security." But security through obscurity is not security—it's just hiding.
+
+### Why Obscurity Fails
+
+Hiding code doesn't make it secure. Real security comes from:
+
+- Proper authentication and authorization
+- Input validation and sanitization
+- Secure communication protocols
+- Regular security audits
+- Following security best practices
+
+### The Open Source Security Model
+
+Open source software is often more secure because:
+
+- More eyes find more bugs
+- Security researchers can audit the code
+- Vulnerabilities are discovered and fixed faster
+- The community helps maintain security
+
+### When to Keep Code Private
+
+There are legitimate reasons to keep code private:
+
+- **Sensitive algorithms**: Proprietary business logic
+- **Personal data handling**: Code that processes PII
+- **Regulatory compliance**: Industries with strict data requirements
+- **Client confidentiality**: When clients explicitly require privacy
+
+But these are exceptions, not the rule.
+
+## Real-World Examples
+
+Let's look at how transparency has worked in practice.
+
+### GitHub as a Portfolio
+
+Many developers use GitHub as their portfolio. Companies like:
+
+- **Stripe**: Open source libraries showcase their engineering culture
+- **Vercel**: Open source tools demonstrate their technical expertise
+- **Netlify**: Public repositories show their commitment to the community
+
+These companies don't hide their code—they showcase it.
+
+### The Agency Advantage
+
+Agencies that show their work:
+
+- Attract better clients who value transparency
+- Build trust faster than competitors
+- Demonstrate technical competence
+- Create case studies from visible projects
+- Build a reputation for quality
+
+### Client Success Stories
+
+Clients who have access to their project's code:
+
+- Understand their system better
+- Can maintain it independently if needed
+- Feel more ownership and investment
+- Are more likely to recommend you
+
+## The Developer's Perspective
+
+What do developers gain from transparency?
+
+### Career Growth
+
+Visible code is a career accelerator:
+
+- **Portfolio building**: Your GitHub is your resume
+- **Skill demonstration**: Show what you can do, not just claim it
+- **Community recognition**: Contribute to open source, get recognized
+- **Learning opportunities**: Get feedback from better developers
+- **Job opportunities**: Recruiters find you through your code
+
+### Professional Development
+
+Working with visible code:
+
+- Encourages best practices
+- Exposes you to code reviews
+- Helps you learn from others
+- Builds your reputation
+- Creates networking opportunities
+
+### Personal Satisfaction
+
+There's genuine satisfaction in:
+
+- Building something others can use
+- Contributing to the community
+- Creating something you're proud to show
+- Helping others learn
+- Being part of something bigger
+
+## Client Benefits
+
+Clients benefit from transparency in multiple ways.
+
+### Understanding and Control
+
+When clients can see their code:
+
+- They understand what they own
+- They can assess code quality
+- They feel more in control
+- They can plan for the future
+- They're not locked into a vendor
+
+### Cost Transparency
+
+Transparent code helps clients understand:
+
+- What they're paying for
+- Why certain features cost what they do
+- How their budget is being used
+- The value they're receiving
+
+### Future Flexibility
+
+With access to code, clients can:
+
+- Switch developers if needed
+- Maintain the system themselves
+- Hire additional developers
+- Scale their team
+- Avoid vendor lock-in
+
+## Implementation Strategies
+
+How do you implement transparency in your practice?
+
+### Start Small
+
+You don't need to open-source everything:
+
+1. **Open source utilities**: Share reusable tools
+2. **Blog about solutions**: Write about interesting problems
+3. **Code reviews**: Make reviews visible to clients
+4. **Documentation**: Keep documentation accessible
+5. **Gradual opening**: Start with non-sensitive projects
+
+### Set Clear Boundaries
+
+Define what stays private:
+
+- Client data and credentials
+- Proprietary business logic
+- Personal information
+- Regulatory-sensitive code
+- Client-requested privacy
+
+### Build a Culture
+
+Create a culture of transparency:
+
+- Encourage code sharing
+- Celebrate open source contributions
+- Make code reviews standard
+- Document your process
+- Share knowledge openly
+
+### Use the Right Tools
+
+Leverage tools that support transparency:
+
+- **GitHub/GitLab**: Version control and collaboration
+- **Documentation sites**: Share knowledge
+- **Blog platforms**: Write about your work
+- **Code review tools**: Make reviews visible
+- **Project management**: Transparent workflows
+
+## Common Concerns and Answers
+
+Let's address the most common objections to transparency.
+
+### "But my code isn't good enough"
+
+**Answer**: Everyone's code improves when it's visible. The fear of judgment is natural, but the benefits outweigh the discomfort. Plus, most code is better than you think.
+
+### "Clients will steal my work"
+
+**Answer**: If your value is just in the code, you're in trouble. Your real value is in:
+
+- Problem-solving ability
+- Domain expertise
+- Communication skills
+- Project management
+- Ongoing support
+
+Code is just a tool.
+
+### "Competitors will copy me"
+
+**Answer**: If competitors can copy your success just by seeing your code, you're not doing anything unique. Real competitive advantage comes from execution, not code.
+
+### "It's too much work"
+
+**Answer**: Transparency doesn't mean documenting everything. Start with:
+
+- Clear code structure
+- Basic documentation
+- Open communication
+- Visible progress
+
+You're probably already doing most of this.
+
+### "Clients don't care about code"
+
+**Answer**: Some don't, but many do. And even if they don't understand code, they appreciate:
+
+- The transparency itself
+- The trust it demonstrates
+- The professionalism it shows
+- The control it gives them
+
+## Measuring Success
+
+How do you know if transparency is working?
+
+### Client Satisfaction
+
+Measure:
+
+- Client retention rates
+- Referral frequency
+- Project success rates
+- Client feedback scores
+- Long-term relationships
+
+### Developer Growth
+
+Track:
+
+- Code quality metrics
+- Learning velocity
+- Community contributions
+- Skill development
+- Career progression
+
+### Business Impact
+
+Monitor:
+
+- Project win rates
+- Client acquisition costs
+- Reputation and brand
+- Team morale
+- Competitive positioning
+
+## The Future of Transparent Development
+
+Transparency is becoming the norm, not the exception.
+
+### Industry Trends
+
+- More companies open-source tools
+- Increased focus on developer experience
+- Growing importance of code quality
+- Community-driven development
+- Knowledge sharing culture
+
+### What This Means
+
+Developers who embrace transparency:
+
+- Will have more opportunities
+- Will build better careers
+- Will create more value
+- Will be more respected
+- Will enjoy their work more
+
+### Your Next Steps
+
+Start today:
+
+1. **Audit your current practice**: What can you make more transparent?
+2. **Choose one project**: Start with something small
+3. **Document your process**: Share how you work
+4. **Engage with the community**: Contribute to open source
+5. **Measure the results**: See what changes
+
+## Conclusion
 
 Stop hiding. Start sharing. Your code is your resume, your proof of work, and your bridge to the community.
+
+Transparency isn't about giving away secrets—it's about building trust, demonstrating quality, and creating value. In a world where information wants to be free, those who share openly will always have an advantage.
+
+The best code is code that others can see, learn from, and build upon. That's not just good for the community—it's good for your career, your clients, and your business.
 
 ---
 
