--- a/src/content/blog/dont-hide-your-code.mdx
+++ b/src/content/blog/dont-hide-your-code.mdx
@@ -2,8 +2,9 @@
 title: "Don't Hide Your Code: The Art of Transparency"
 description: "Why showing your work is better than hiding behind a curtain of 'proprietary' secrets."
 pubDate: 2025-12-19
-author: "Dmitrii Sakharov"
-avatar: "../../assets/images/capibara.jpg"
+authors: ["Dmitrii Sakharov", "Vladimir Belyaev"]
+avatars:
+  ["../../assets/images/capibara.jpg", "../../assets/images/pillow.jpg"]
 image: "../../assets/images/STEM.png"
 tags: ["engineering", "open-source", "transparency"]
 ---
